<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    style="@style/game_cell"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity"
    android:background="@drawable/gradient_list"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_tv_2048"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/highlight_text"
            android:background="@drawable/game_cell"
            android:backgroundTint="#BC4E1010"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"

            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/app_game_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/game_cell"
                android:textColor="#FFFF8C"
                android:text="@string/app_game_score"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                />
            <Button
                android:id="@+id/btn_new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button"
                android:textSize="18dp"

                app:backgroundTint="@null"
                android:text="@string/app_tv_new_game"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/app_game_best_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/game_cell"
                android:textColor="#FFFF8C"
                android:text="@string/app_game_best_result"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:backgroundTint="@null"
                />

            <Button
                android:id="@+id/btn_new_undo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/app_game_undo"
                android:textSize="18dp"
                app:backgroundTint="@null" />

        </LinearLayout>
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/app_game_text"/>

        <LinearLayout
            android:id="@+id/app_game_fields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@color/button_background"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/game_cell_00"
                    style="@style/game_fields"
                    />
                <TextView
                    android:id="@+id/game_cell_01"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_02"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_03"
                    style="@style/game_fields"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/game_cell_10"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_11"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_12"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_13"
                    style="@style/game_fields"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/game_cell_20"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_21"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_22"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_23"
                    style="@style/game_fields"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/game_cell_30"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_31"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_32"
                    style="@style/game_fields"/>
                <TextView
                    android:id="@+id/game_cell_33"
                    style="@style/game_fields"/>
            </LinearLayout>
        </LinearLayout>



</LinearLayout>